<resources>
    <string name="app_name">Counter</string>
    <string name="cghint">请输入摄氏度</string>
    <string name="btn">转换为华氏度</string>
    <string name="result">结果是：</string>
    <string name="team">Team A</string>
    <string name="team2">Team B</string>
    <string name="score">0</string>
    <string name="three">+3 points</string>
    <string name="two">+2 points</string>
    <string name="one">+1 points</string>
    <string name="resetbtn">reset</string>
</resources>