<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".CountActivity1">

    <Button
        android:id="@+id/reset"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:onClick="btnReset"
        android:text="@string/resetbtn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="409dp"
        android:layout_height="573dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:textAlignment="center"
            android:textColor="#C9000000"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="50dp"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="60sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="#BCFF9800"
            android:onClick="btnAdd3"
            android:text="@string/three"
            android:textSize="20sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="#BCFF9800"
            android:onClick="btnAdd2"
            android:text="@string/two"
            android:textSize="20sp" />

        <Button
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="#BCFF9800"
            android:onClick="btnAdd1"
            android:text="@string/one"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>