<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team"
                android:textAlignment="center"
                android:textColor="#C9000000"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="50dp"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="60sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/three1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="#BCFF9800"
                android:onClick="btnAdd3"
                android:text="@string/three"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="#BCFF9800"
                android:onClick="btnAdd2"
                android:text="@string/two"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#BCFF9800"
                android:onClick="btnAdd1"
                android:text="@string/one"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team2"
                android:textAlignment="center"
                android:textColor="#C9000000"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="50dp"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="60sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/three2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="#BCFF9800"
                android:onClick="btnAdd3"
                android:text="@string/three"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="#BCFF9800"
                android:onClick="btnAdd2"
                android:text="@string/two"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#BCFF9800"
                android:onClick="btnAdd1"
                android:text="@string/one"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:onClick="btnReset"
        android:text="@string/resetbtn"
        android:textSize="20sp"
        android:background="#BCFF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>